// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render footer renders button with loading animation 1`] = `
<footer
  class="footer  footerShadow"
>
  <div
    class="container containerDesktop"
  >
    <div
      class="container buttonRight buttonGroup"
    >
      <button
        class="button disabledButton Button__StyledButton-sc-12lsl5w-0 index__c-btn___1jmsn index__c-btn--primary___3nbMO lcPfmb"
        data-garden-id="buttons.button"
        data-garden-version="3.7.0"
        tabindex="0"
        type="button"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="container "
        >
          <div
            class="
      circle loadingAnimation
      bounce
      
    "
          />
          <div
            class="
      circle loadingAnimation
      bounce
      
    "
          />
          <div
            class="
      circle loadingAnimation
      bounce
      
    "
          />
        </div>
      </button>
    </div>
  </div>
</footer>
`;

exports[`render footer renders expected next button 1`] = `
<footer
  class="footer  footerShadow"
>
  <div
    class="container containerDesktop"
  >
    <div
      class="container buttonRight buttonGroup"
    >
      <button
        class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___1jmsn index__c-btn--primary___3nbMO lcPfmb"
        data-garden-id="buttons.button"
        data-garden-version="3.7.0"
        tabindex="0"
        type="button"
      >
        click me
      </button>
    </div>
  </div>
</footer>
`;

exports[`renders the expected components 1`] = `
<div>
  <div>
    <div
      class="container flexContainer desktop containerDesktop"
      data-testid="scrollcontainer"
      style="height: 550px;"
    >
      <header
        class="header userHeader"
      >
        <h1
          class="title"
        />
        <form
          class="form"
          novalidate=""
        >
          <div
            class="desktopContainer Input-sc-4gf5js-0-div text__c-txt__input___2ZeOl text__c-txt__input--media___238Mn hytfkM"
            data-garden-id="textfields.input"
            data-garden-version="3.7.0"
          >
            <label
              class="label Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
              data-garden-id="textfields.label"
              data-garden-version="3.7.0"
            />
            <input
              aria-invalid="false"
              autocapitalize="off"
              class="searchInput Input-sc-4gf5js-0 text__c-txt__input___2ZeOl text__c-txt__input--bare___2auEk kdlara"
              data-garden-id="textfields.input"
              data-garden-version="3.7.0"
              placeholder=""
              type="search"
              value=""
            />
            <div
              class="desktopSearchOrLoading MediaFigure-sc-1g79mon-0 text__c-txt__input--media__figure___Qcs4_ cqfywo"
              data-garden-id="textfields.media_figure"
              data-garden-version="3.7.0"
            >
              <span
                class="container notFocused icon Icon--search"
                data-testid="Icon--search"
                role="button"
                tabindex="0"
                type="Icon--search"
              >
                <svgr-mock
                  aria-hidden="true"
                  iconfilename="widget-icon_search.svg"
                />
              </span>
            </div>
          </div>
        </form>
      </header>
      <div
        class="content"
      >
        <div>
          <div />
        </div>
      </div>
      <footer
        class="footer  footerShadow"
      >
        <div
          class="container containerDesktop"
        >
          <div
            class="container buttonRight buttonGroup"
          >
            <button
              class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___1jmsn index__c-btn--primary___3nbMO lcPfmb"
              data-garden-id="buttons.button"
              data-garden-version="3.7.0"
              tabindex="0"
              type="button"
            >
              click me
            </button>
          </div>
        </div>
      </footer>
    </div>
    <a
      class="
      logo
      formSuccess
      
      
    "
      href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
      tabindex="-1"
      target="_blank"
    >
      <span
        class="container icon Icon--zendesk"
        data-testid="Icon--zendesk"
        type="Icon--zendesk"
      >
        <svgr-mock
          aria-hidden="true"
          iconfilename="widget-icon_zendesk.svg"
        />
      </span>
      <span
        class="hidden"
      >
        zendesk
      </span>
    </a>
  </div>
</div>
`;

exports[`renders the expected components when articleViewActive is true 1`] = `
<div>
  <div>
    <div
      class="container flexContainer desktop containerDesktop"
      data-testid="scrollcontainer"
      style="height: 550px;"
    >
      <header
        class="header userHeader"
      >
        <h1
          class="title"
        />
      </header>
      <div
        class="content"
      >
        <div>
          <div />
        </div>
      </div>
      <footer
        class="footer  footerShadow"
      >
        <div
          class="container containerDesktop"
        >
          <div
            class="container buttonRight buttonGroup"
          >
            <button
              class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___1jmsn index__c-btn--primary___3nbMO lcPfmb"
              data-garden-id="buttons.button"
              data-garden-version="3.7.0"
              tabindex="0"
              type="button"
            >
              click me
            </button>
          </div>
        </div>
      </footer>
    </div>
    <a
      class="
      logo
      formSuccess
      
      
    "
      href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
      tabindex="-1"
      target="_blank"
    >
      <span
        class="container icon Icon--zendesk"
        data-testid="Icon--zendesk"
        type="Icon--zendesk"
      >
        <svgr-mock
          aria-hidden="true"
          iconfilename="widget-icon_zendesk.svg"
        />
      </span>
      <span
        class="hidden"
      >
        zendesk
      </span>
    </a>
  </div>
</div>
`;

exports[`renders the expected components when isOnInitialDesktopSearchScreen is true 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="header"
    >
      <h1
        class="title"
      >
        Help
      </h1>
    </div>
    <div
      class="container"
    >
      <form
        class="form"
        novalidate=""
      >
        <div
          class="desktopContainer Input-sc-4gf5js-0-div text__c-txt__input___2ZeOl text__c-txt__input--media___238Mn text__is-focused___3mc46 hytfkM"
          data-garden-id="textfields.input"
          data-garden-version="3.7.0"
        >
          <label
            class="label Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
            data-garden-id="textfields.label"
            data-garden-version="3.7.0"
          >
            How can we help?
          </label>
          <input
            aria-invalid="false"
            autocapitalize="off"
            class="searchInput Input-sc-4gf5js-0 text__c-txt__input___2ZeOl text__c-txt__input--bare___2auEk kdlara"
            data-garden-id="textfields.input"
            data-garden-version="3.7.0"
            placeholder="How can we help?"
            type="search"
            value=""
          />
          <div
            class="desktopSearchOrLoading MediaFigure-sc-1g79mon-0 text__c-txt__input--media__figure___Qcs4_ cqfywo"
            data-garden-id="textfields.media_figure"
            data-garden-version="3.7.0"
          >
            <span
              class="container focused notFocused icon Icon--search"
              data-testid="Icon--search"
              role="button"
              tabindex="0"
              type="Icon--search"
            >
              <svgr-mock
                aria-hidden="true"
                iconfilename="widget-icon_search.svg"
              />
            </span>
          </div>
        </div>
      </form>
    </div>
    <footer
      class="footer"
    >
      <div
        class="footer"
      >
        <a
          class="icon"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svgr-mock
            iconfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
  </div>
</div>
`;
